# estate-agent-england

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: uk-property-compliance-reviewer.md
evals/: comparable_summary_cases.jsonl  listing_review_cases.jsonl  seller_checklist_cases.jsonl
fixtures/: epc_sample.json  listing_missing_material_info.json  listing_risky_claims.json  listing_valid.json  local_land_charges_sample.json  price_paid_sample.csv
mcp/: estate_agent_data_server.py
references/: data-sources.md  england-estate-agent-compliance.md  material-information-checklist.md  output-templates.md  property-shared-tools.json  red-lines.md
scripts/: check_fixture_integrity.py  epc_lookup_stub.py  local_land_charges_stub.py  summarise_price_paid.py  validate_listing.py
skills/buyer-enquiry-response/: SKILL.md
skills/market-comparable-summary/: SKILL.md
skills/property-listing-draft/: SKILL.md
skills/property-listing-review/: SKILL.md
skills/seller-onboarding-checklist/: SKILL.md
tests/: test_fixture_integrity.py  test_format_integrity.py  test_summarise_price_paid.py  test_validate_listing.py
