[project]
name = "estate-agent-england"
version = "0.1.0"
description = "UK estate agent compliance plugin — scripts, MCP server, and validation tools"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "fastmcp>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function calls in default arguments — OK in FastMCP tool signatures
]
